yes, remove recipes///but sand and logs...